Fix responsivness on small mobiles - landscape

--- a/src/scss/_mediaq.scss
+++ b/src/scss/_mediaq.scss
@@ -256,31 +256,31 @@
 
     &__player {
       &-one {
-        grid-column-start: 1;
-        grid-column-end: 1;
-        grid-row-start: 1;
-        grid-row-end: 3;
+        grid-column-start: 3;
+        grid-column-end: 3;
+        grid-row-start: 4;
+        grid-row-end: 5;
       }
 
       &-two {
         grid-column-start: 3;
-        grid-column-end: 3;
+        grid-column-end: 4;
         grid-row-start: 1;
         grid-row-end: 3;
 
         &--duel {
-          grid-column-start: 3;
-          grid-column-end: 3;
-          grid-row-start: 4;
-          grid-row-end: 5;
+          grid-column-start: 1;
+          grid-column-end: 1;
+          grid-row-start: 1;
+          grid-row-end: 3;
         }
       }
 
       &-three {
-        grid-column-start: 3;
-        grid-column-end: 3;
-        grid-row-start: 3;
-        grid-row-end: 5;
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 1;
+        grid-row-end: 3;
       }
 
       &-four {
